--- a/api-page/index.html
+++ b/api-page/index.html
@@ -6,68 +6,99 @@
     <link rel="icon" href="/src/icon.png" type="image/png">
     <title id="page"></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+    <!-- Loading Screen -->
     <div id="loadingScreen">
         <div class="spinner-wrapper">
-            <div class="spinner-border text-dark mb-2" role="status">
+            <div class="spinner-border mb-2" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
             <p>Loading...</p>
         </div>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-light">
+
+    <!-- Theme Toggle -->
+    <div class="theme-toggle">
+        <button id="themeToggleBtn" class="btn">
+            <i class="fas fa-moon"></i>
+        </button>
+    </div>
+
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" style="font-weight: 600; display: flex; color: rgba(0, 0, 0, 0.7); align-items: center;">
-                <span id="header" class="me-2"></span>
-                <div id="versionHeader" style="background-color: rgba(84, 190, 255, 1); color: white; padding: 4px 12px; font-size: 12px; border-radius: 100px;"></div>
+            <a class="navbar-brand" href="#">
+                <span id="header"></span>
+                <div id="versionHeader"></div>
             </a>
         </div>
     </nav>
-    <div class="container">
-        <img id="dynamicImage" class="banner mb-4" style="border-radius: 8px;" src="">
-        <div id="nameContainer" style="display: flex; align-items: center;">
-            <h1 id="name" style="font-size: 30px; margin-right: 8px;"></h1>
-            <div id="version" style="background-color: #333; color: white; padding: 1px 6px; font-size: 11px; border-radius: 100px;"></div>
+
+    <!-- Main Content -->
+    <div class="container main-content">
+        <div class="hero-container">
+            <img id="dynamicImage" class="banner" src="">
+            <div id="nameContainer">
+                <h1 id="name"></h1>
+                <div id="version"></div>
+            </div>
+            <p id="description" class="lead"></p>
+            <div id="apiLinks" class="mb-4"></div>
         </div>
-        <p id="description" class="lead mb-3"></p>
-        <div id="apiLinks" class="mb-5"></div>
-        <input type="text" id="searchInput" class="form-control mb-5" placeholder="Search API...">
+
+        <!-- Search Bar -->
+        <div class="search-container">
+            <div class="input-group">
+                <span class="input-group-text"><i class="fas fa-search"></i></span>
+                <input type="text" id="searchInput" class="form-control" placeholder="Search API...">
+            </div>
+        </div>
+
+        <!-- API Content -->
         <div class="tab-content" id="apiContent"></div>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div id="wm"></div>
+        </div>
+    </footer>
+
+    <!-- API Response Modal -->
     <div class="modal fade" id="apiResponseModal" tabindex="-1" aria-labelledby="apiResponseModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" id="modalDialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <div>
                         <h5 class="modal-title" id="apiResponseModalLabel"></h5>
-                        <p class="modal-desc text-muted mb-0" id="apiResponseModalDesc" style="font-size: 14px;"></p>
+                        <p class="modal-desc mb-0" id="apiResponseModalDesc"></p>
                     </div>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <pre id="apiEndpoint" style="background-color: #f8f9fa; padding: 10px; border-radius: 5px;"></pre>
+                    <pre id="apiEndpoint"></pre>
                     <div id="apiQueryInputContainer"></div>
-                    <div id="apiResponseLoading" class="d-none d-flex justify-content-center align-items-center" style="height: 100px;">
-                        <div class="spinner-border custom-spinner" role="status">
+                    <div id="apiResponseLoading" class="d-none">
+                        <div class="spinner-border" role="status">
                             <span class="visually-hidden">Loading...</span>
                         </div>
                     </div>
-                    <pre id="apiResponseContent" class="d-none mt-2" style="background-color: #f8f9fa; padding: 10px; border-radius: 5px;"></pre>
+                    <pre id="apiResponseContent" class="d-none"></pre>
                 </div>
                 <div class="modal-footer">
-                    <button id="submitQueryBtn" class="btn btn-dark">Submit</button>
+                    <button id="submitQueryBtn" class="btn">Submit</button>
                 </div>
             </div>
         </div>
     </div>
-        <div id="wm" style="text-align: center; color: rgba(0, 0, 0, 0.6); font-weight: 500; font-size: 15px; margin-top: 20px;">
-    </div>
 
-    <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/script.js"></script>
 </body>
