--- a/api-page/index.html
+++ b/api-page/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/src/icon.png" type="image/png">
     <title id="page"></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="/styles.css">
 </head>
@@ -14,16 +14,17 @@
     <!-- Loading Screen -->
     <div id="loadingScreen">
         <div class="spinner-wrapper">
-            <div class="spinner-border mb-2" role="status">
-                <span class="visually-hidden">Loading...</span>
+            <div class="spinner">
+                <div class="double-bounce1"></div>
+                <div class="double-bounce2"></div>
             </div>
-            <p>Loading...</p>
+            <p>Loading<span class="loading-dots">...</span></p>
         </div>
     </div>
 
     <!-- Theme Toggle -->
     <div class="theme-toggle">
-        <button id="themeToggleBtn" class="btn">
+        <button id="themeToggleBtn" class="btn" aria-label="Toggle theme">
             <i class="fas fa-moon"></i>
         </button>
     </div>
@@ -35,19 +36,30 @@
                 <span id="header"></span>
                 <div id="versionHeader"></div>
             </a>
+            <div class="nav-actions">
+                <a href="https://github.com" target="_blank" class="github-link">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
         </div>
     </nav>
 
     <!-- Main Content -->
     <div class="container main-content">
         <div class="hero-container">
-            <img id="dynamicImage" class="banner" src="">
+            <div class="hero-bg-animation">
+                <div class="hero-bg-circle"></div>
+                <div class="hero-bg-circle"></div>
+                <div class="hero-bg-circle"></div>
+            </div>
+            
             <div id="nameContainer">
                 <h1 id="name"></h1>
                 <div id="version"></div>
             </div>
             <p id="description" class="lead"></p>
             <div id="apiLinks" class="mb-4"></div>
+            <img id="dynamicImage" class="banner" src="/api/placeholder/1200/400" alt="API Banner">
         </div>
 
         <!-- Search Bar -->
@@ -55,6 +67,9 @@
             <div class="input-group">
                 <span class="input-group-text"><i class="fas fa-search"></i></span>
                 <input type="text" id="searchInput" class="form-control" placeholder="Search API...">
+                <button class="clear-search" id="clearSearch">
+                    <i class="fas fa-times"></i>
+                </button>
             </div>
         </div>
 
@@ -65,13 +80,19 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <div id="wm"></div>
+            <div class="footer-content">
+                <div id="wm"></div>
+                <div class="footer-links">
+                    <a href="https://whatsapp.com/channel/0029VasjrIh3gvWXKzWncf2P" class="footer-link">Info</a>
+                    <a href="https://wa.me/message/UB3MPOSN5S7AG1" class="footer-link">Contact</a>
+                </div>
+            </div>
         </div>
     </footer>
 
     <!-- API Response Modal -->
     <div class="modal fade" id="apiResponseModal" tabindex="-1" aria-labelledby="apiResponseModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" id="modalDialog">
+        <div class="modal-dialog modal-dialog-centered modal-lg" id="modalDialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <div>
@@ -81,17 +102,38 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <pre id="apiEndpoint"></pre>
+                    <div class="endpoint-container">
+                        <div class="endpoint-label">
+                            <span>Endpoint</span>
+                            <button class="copy-btn" id="copyEndpoint" title="Copy to clipboard">
+                                <i class="far fa-copy"></i>
+                            </button>
+                        </div>
+                        <pre id="apiEndpoint"></pre>
+                    </div>
                     <div id="apiQueryInputContainer"></div>
                     <div id="apiResponseLoading" class="d-none">
-                        <div class="spinner-border" role="status">
-                            <span class="visually-hidden">Loading...</span>
+                        <div class="spinner">
+                            <div class="double-bounce1"></div>
+                            <div class="double-bounce2"></div>
                         </div>
+                        <p>Processing request...</p>
                     </div>
-                    <pre id="apiResponseContent" class="d-none"></pre>
+                    <div class="response-container d-none" id="responseContainer">
+                        <div class="response-label">
+                            <span>Response</span>
+                            <button class="copy-btn" id="copyResponse" title="Copy to clipboard">
+                                <i class="far fa-copy"></i>
+                            </button>
+                        </div>
+                        <pre id="apiResponseContent" class="d-none"></pre>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                    <button id="submitQueryBtn" class="btn">Submit</button>
+                    <button id="submitQueryBtn" class="btn">
+                        <span>Submit</span>
+                        <i class="fas fa-paper-plane ml-2"></i>
+                    </button>
                 </div>
             </div>
         </div>
