--- a/api-page/index.html
+++ b/api-page/index.html
@@ -59,7 +59,7 @@
             </div>
             <p id="description" class="lead"></p>
             <div id="apiLinks" class="mb-4"></div>
-            <img id="dynamicImage" class="banner" src="/api/placeholder/1200/400" alt="API Banner">
+            <img id="dynamicImage" class="banner" src="/api/src/banner.jpg" alt="API Banner">
         </div>
 
         <!-- Search Bar -->
