--- a/api-page/index.html
+++ b/api-page/index.html
@@ -37,7 +37,7 @@
                 <div id="versionHeader"></div>
             </a>
             <div class="nav-actions">
-                <a href="https://github.com" target="_blank" class="github-link">
+                <a href="https://github.com/FlowFalcon" target="_blank" class="github-link">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
@@ -142,10 +142,6 @@
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-  </script>
-  <script defer src="/_vercel/insights/script.js"></script>
     <script src="/script.js"></script>
 </body>
 </html>
