--- a/api-page/index.html
+++ b/api-page/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/src/icon.png" type="image/png">
+    <meta name="description" content="The FlowFalcon project makes Simple and easy to use API">
+    <meta name="keywords" content="FlowFalcon API, Falcon API">
+    <meta property="og:url" content="https://flowfalcon.dpdns.org" />
+    <meta property="og:title" content="Falcon API - Simple and easy API" />
+    <meta property="og:image" content="/src/banner.jpg"/>
     <title id="page"></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
