--- a/api-page/index.html
+++ b/api-page/index.html
@@ -90,7 +90,7 @@
                 </div>
                 
                 <div class="hero-visual" aria-hidden="true"> <div class="banner-container">
-                        <img id="dynamicImage" class="banner" src="/src/banner.jpg" alt="Banner API Falcon">
+                        <img id="dynamicImage" class="banner" src="" alt="Banner API Falcon">
                     </div>
                     <div class="shape shape-1"></div>
                     <div class="shape shape-2"></div>
