--- a/api-page/index.html
+++ b/api-page/index.html
@@ -27,7 +27,7 @@
 
     <aside class="side-nav" id="sideNavigation" aria-label="Navigasi Utama">
         <div class="side-nav-logo">
-            <img src="/src/icon.png" alt="Logo API" style="width: 40px; height: 40px; border-radius: 8px;"> <span id="sideNavName">API</span>
+            <img src="" alt="Logo API" style="width: 40px; height: 40px; border-radius: 8px;"> <span id="sideNavName">API</span>
             <div id="versionHeader" class="badge-pill"></div>
         </div>
         
@@ -90,7 +90,7 @@
                 </div>
                 
                 <div class="hero-visual" aria-hidden="true"> <div class="banner-container">
-                        <img id="dynamicImage" class="banner" src="" alt="Banner API Falcon">
+                        <img id="dynamicImage" class="banner" src="/src/banner.jpg" alt="Banner API Falcon">
                     </div>
                     <div class="shape shape-1"></div>
                     <div class="shape shape-2"></div>
