--- a/api-page/index.html
+++ b/api-page/index.html
@@ -8,7 +8,7 @@
     <meta property="og:image" content="/src/banner.jpg"> <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="URL_ANDA_DISINI"> <meta property="twitter:title" content="Falcon API - Dokumentasi API Modern">
     <meta property="twitter:description" content="Jelajahi berbagai endpoint API kami dengan antarmuka yang modern dan mudah digunakan.">
-    <meta property="twitter:image" content="/src/banner.jpg"> <link rel="icon" href="/src/icon.png" type="image/png">
+    <meta property="twitter:image" content="/src/banner.jpg"> <link rel="icon" href="/src/icons.png" type="image/png">
     <title id="page">Falcon API</title> <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
