--- a/api-page/index.html
+++ b/api-page/index.html
@@ -38,7 +38,7 @@
                 <i class="fas fa-plug" aria-hidden="true"></i>
                 <span>API</span>
             </a>
-            <a href="https://github.com/FlowFalcon/falcon-api/blob/main/README.md" target="_blank" rel="noopener noreferrer" class="side-nav-link"> <i class="fas fa-book" aria-hidden="true"></i>
+            <a href="https://github.com/FlowFalcon/Falcon-Api-UI.git/blob/main/README.md" target="_blank" rel="noopener noreferrer" class="side-nav-link"> <i class="fas fa-book" aria-hidden="true"></i>
                 <span>Dokumentasi</span>
             </a>
             <a href="https://github.com/FlowFalcon" target="_blank" rel="noopener noreferrer" class="side-nav-link">
@@ -81,7 +81,7 @@
                         <h1 id="name" class="gradient-text">Falcon API</h1> <div id="version" class="badge-pill">v1.0</div> </div>
                     
                     <p id="description" class="hero-description">Antarmuka dokumentasi API yang simpel dan mudah disesuaikan.</p> <div id="apiLinks" class="hero-actions">
-                        <a href="https://github.com/FlowFalcon/falcon-api" target="_blank" rel="noopener noreferrer" class="api-link" style="animation-delay: 0s;" aria-label="Lihat di GitHub">
+                        <a href="https://github.com/FlowFalcon/Falcon-Api-UI.git" target="_blank" rel="noopener noreferrer" class="api-link" style="animation-delay: 0s;" aria-label="Lihat di GitHub">
                             <i class="fab fa-github" aria-hidden="true"></i> Lihat di GitHub
                         </a>
                     </div>
