--- a/api-page/index.html
+++ b/api-page/index.html
@@ -3,9 +3,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Dokumentasi API modern dan antarmuka pengujian yang interaktif. Jelajahi berbagai endpoint API kami dengan mudah."> <meta name="keywords" content="API, Dokumentasi API, REST API, Falcon API, FlowFalcon, Alat Pengembang"> <meta name="author" content="FlowFalcon"> <meta property="og:type" content="website">
-    <meta property="og:url" content="flowfalcon.dpdns.org"> <meta property="og:title" content="Falcon API - Dokumentasi API Modern">
+    <meta property="og:url" content="URL_ANDA_DISINI"> <meta property="og:title" content="Falcon API - Dokumentasi API Modern">
     <meta property="og:description" content="Jelajahi berbagai endpoint API kami dengan antarmuka yang modern dan mudah digunakan.">
     <meta property="og:image" content="/src/banner.jpg"> <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="URL_ANDA_DISINI"> <meta property="twitter:title" content="Falcon API - Dokumentasi API Modern">
+    <meta property="twitter:description" content="Jelajahi berbagai endpoint API kami dengan antarmuka yang modern dan mudah digunakan.">
     <meta property="twitter:image" content="/src/banner.jpg"> <link rel="icon" href="/src/icons.png" type="image/png">
     <title id="page">Falcon API</title> <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"/>
@@ -38,7 +40,7 @@
                 <i class="fas fa-plug" aria-hidden="true"></i>
                 <span>API</span>
             </a>
-            <a href="https://github.com/FlowFalcon/Falcon-Api-UI.git/blob/main/README.md" target="_blank" rel="noopener noreferrer" class="side-nav-link"> <i class="fas fa-book" aria-hidden="true"></i>
+            <a href="https://github.com/FlowFalcon/falcon-api/blob/main/README.md" target="_blank" rel="noopener noreferrer" class="side-nav-link"> <i class="fas fa-book" aria-hidden="true"></i>
                 <span>Dokumentasi</span>
             </a>
             <a href="https://github.com/FlowFalcon" target="_blank" rel="noopener noreferrer" class="side-nav-link">
@@ -81,7 +83,7 @@
                         <h1 id="name" class="gradient-text">Falcon API</h1> <div id="version" class="badge-pill">v1.0</div> </div>
                     
                     <p id="description" class="hero-description">Antarmuka dokumentasi API yang simpel dan mudah disesuaikan.</p> <div id="apiLinks" class="hero-actions">
-                        <a href="https://github.com/FlowFalcon/Falcon-Api-UI.git" target="_blank" rel="noopener noreferrer" class="api-link" style="animation-delay: 0s;" aria-label="Lihat di GitHub">
+                        <a href="https://github.com/FlowFalcon/falcon-api" target="_blank" rel="noopener noreferrer" class="api-link" style="animation-delay: 0s;" aria-label="Lihat di GitHub">
                             <i class="fab fa-github" aria-hidden="true"></i> Lihat di GitHub
                         </a>
                     </div>
