--- a/api-page/index.html
+++ b/api-page/index.html
@@ -7,12 +7,12 @@
     <meta name="keywords" content="API, Dokumentasi API, REST API, Falcon API, FlowFalcon, Alat Pengembang">
     <meta name="author" content="FlowFalcon">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="URL_ANDA_DISINI"> <meta property="og:title" content="Falcon API - Dokumentasi API Modern">
+    <meta property="og:url" content="https://flowfalcon.dpdns.org"> <meta property="og:title" content="Falcon API - Dokumentasi API Modern">
     <meta property="og:description" content="Jelajahi berbagai endpoint API kami dengan antarmuka yang modern dan mudah digunakan.">
     <meta property="og:image" content="/src/banner.jpg"> <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="URL_ANDA_DISINI"> <meta property="twitter:title" content="Falcon API - Dokumentasi API Modern">
+    <meta property="twitter:url" content="https://flowfalcon.dpdns.org"> <meta property="twitter:title" content="Falcon API - Dokumentasi API Modern">
     <meta property="twitter:description" content="Jelajahi berbagai endpoint API kami dengan antarmuka yang modern dan mudah digunakan.">
-    <meta property="twitter:image" content="/src/banner.jpg"> <link rel="icon" href="/src/icons.png" type="image/png"> <title id="page">Falcon API</title>
+    <meta property="twitter:image" content="/src/banner.jpg"> <link rel="icon" href="/src/icon.png" type="image/png"> <title id="page">Falcon API</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
@@ -30,7 +30,7 @@
 
     <aside class="side-nav" id="sideNavigation" aria-label="Navigasi Utama">
         <div class="side-nav-logo">
-            <img src="/src/icons.png" alt="Logo API" style="width: 40px; height: 40px; border-radius: 8px;">
+            <img src="/src/icon.png" alt="Logo API" style="width: 40px; height: 40px; border-radius: 8px;">
             <span id="sideNavName">API</span>
             <div id="versionHeader" class="badge-pill"></div>
         </div>
@@ -43,10 +43,6 @@
             <a href="#apis" class="side-nav-link">
                 <i class="fas fa-plug" aria-hidden="true"></i>
                 <span>API</span>
-            </a>
-            <a href="https://github.com/FlowFalcon/falcon-api/blob/main/README.md" target="_blank" rel="noopener noreferrer" class="side-nav-link">
-                <i class="fas fa-book" aria-hidden="true"></i>
-                <span>Dokumentasi</span>
             </a>
             <a href="https://github.com/FlowFalcon" target="_blank" rel="noopener noreferrer" class="side-nav-link">
                 <i class="fab fa-github" aria-hidden="true"></i>
@@ -99,7 +95,15 @@
                     </div>
                 </div>
                 
-                </section>
+                <div class="hero-visual" aria-hidden="true">
+                    <div class="banner-container">
+                        <img id="dynamicImage" class="banner" src="/src/banner.jpg" alt="Banner API">
+                    </div>
+                    <div class="shape shape-1"></div>
+                    <div class="shape shape-2"></div>
+                    <div class="shape shape-3"></div>
+                </div>
+            </section>
             
             <section id="apis" class="api-section" aria-labelledby="apiSectionTitle">
                 <h2 id="apiSectionTitle" class="section-title">API yang Tersedia</h2>
