--- a/api-page/index.html
+++ b/api-page/index.html
@@ -1945,6 +1945,17 @@
                 transform: translateX(-100%);
             }
 
+            .search-wrapper {
+        display: flex;
+        flex: 1;
+        margin: 0 1rem; 
+        max-width: 100%;
+    }
+
+             .search-shortcut {
+        display: none;
+    }
+
             .side-nav.active {
                 transform: translateX(0);
                 box-shadow: var(--shadow-xl);
