--- a/api-page/index.html
+++ b/api-page/index.html
@@ -72,7 +72,7 @@
         <h1 class="text-3xl md:text-4xl font-bold gradient-text">Falcon-API</h1>
     </div>
     <p class="text-slate-400 text-xs mx-auto mb-4">
-        Welcome to Falcon-API documentation. This interactive interface allows you to explore and test our comprehensive collection of API endpoints in real-time.
+Selamat datang di dokumentasi Falcon-API. Antarmuka interaktif ini memungkinkan Anda menjelajahi dan menguji koleksi lengkap titik akhir API kami secara real-time.
     </p>
     
      <div class="mb-4 text-xs space-y-1">
@@ -129,7 +129,7 @@
       2025 FlowFalcon   
     </p>
     <p class="text-slate-400 text-xs mx-auto mb-4">
-inspirasi design dari: api.nekohost.my.id   
+inspirasi design dari: <a href="https://api.nekohost.my.id" target="_blank"</a>api.nekohost.my.id</a>   
     </p>
 </footer>
 </main>
