--- a/api-page/index.html
+++ b/api-page/index.html
@@ -129,7 +129,7 @@ Selamat datang di dokumentasi Falcon-API. Antarmuka interaktif ini memungkinkan 
       2025 FlowFalcon   
     </p>
     <p class="text-slate-400 text-xs mx-auto mb-4">
-inspirasi design dari: <a href="https://api.nekohost.my.id" target="_blank"</a>api.nekohost.my.id</a>   
+inspirasi design dari: <a href="https://api.nekohost.my.id" target="_blank">api.nekohost.my.id</a>   
     </p>
 </footer>
 </main>
